--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,4 +23,15 @@ jobs:
           cd user
           touch name.txt
           echo "Hello World!" > name.txt
-
+      - name: install the docker engine
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build the Docker image
+        env:
+          image_name: Test-image
+          version: 1.0.0 
+          username: ${{ secret.DOCKER_USERNAME }}
+        run: |
+            docker build -t $username/$image_name:$version .
