--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,20 +18,21 @@ jobs:
 
       - name: Create directory and file
         run: |
-          #!/bin/bash
           mkdir user
           cd user
           touch name.txt
           echo "Hello World!" > name.txt
-      - name: install the docker engine
+
+      - name: Install Docker Engine
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build the Docker image
         env:
           image_name: Test-image
-          version: 1.0.0 
-          username: ${{ secret.DOCKER_USERNAME }}
+          version: 1.0.0
+          username: ${{ secrets.DOCKER_USERNAME }}
         run: |
-            docker build -t $username/$image_name:$version .
+          docker build -t $username/$image_name:$version .
