--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,8 +26,12 @@ jobs:
       - name: Install Docker Engine
         uses: docker/login-action@v3
         with:
+
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: login docker hube
+        run: echo  ${{ secrets.DOCKER_TOKEN }}   
 
       - name: Build the Docker image
         env:
