--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,3 +46,15 @@ jobs:
               username: ${{ secrets.DOCKER_USERNAME }}
             run: |
                 docker push $username/$image_name:$version
+          - name: Run tests inside Docker container
+            run: |
+               docker run --rm ${{ secrets.DOCKER_USERNAME }}/new-image:1.0.0 /home/adetutu/designo-website/src/test.js
+
+              
+              
+
+          
+
+
+      
+   
