test docker image

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ name: CI
 on:
   push: # The event that occurs
     branches:
-        - main
+        - master
 jobs:
     test-and-build:
         runs-on: ubuntu-latest
