--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,72 +1,69 @@
-# Workflow Name
 name: CI
 
-# Define when to trigger the workflow
 on:
   push:
     branches:
-      - master  # Trigger on push to the 'master' branch
+      - main
 
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
       - name: Check out the code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js environment (necessary for running QUnit tests)
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'  # You can use a different version of Node.js if needed
-
-      # Step 3: Install dependencies
-      - name: Install dependencies
+      - name: Install Nginx
         run: |
-          npm install  # Install your project's dependencies, if any
+          sudo apt-get update
+          sudo apt-get install -y nginx
+          sudo systemctl start nginx
+          sudo systemctl enable nginx
 
-      # Step 4: Install Chromium (for headless browser testing)
-      - name: Install Chromium browser
-        run: sudo apt-get install -y chromium-browser
-
-      # Step 5: Install QUnit CLI (or test runner of your choice)
-      - name: Install QUnit CLI
-        run: npm install -g qunit
-
-      # Step 6: Run QUnit tests
-      - name: Run QUnit tests
+      - name: Copy files to Nginx's root directory
         run: |
-          # Run QUnit tests using the Chromium browser (headless mode)
-          npx qunit --browser chromium index.html --reporter json > result.json  # Save the result to result.json
+          # Ensure permissions and clean up previous HTML directory
+          sudo chmod -R 777 /var/www
+          sudo chown -R $USER:$USER /var/www
+          sudo rm -rf /var/www/html
+          sudo mkdir /var/www/html
 
-      # Step 7: Upload test results as an artifact
-      - name: Upload test results as artifact
-        uses: actions/upload-artifact@v3
+          # Copy files from the checked-out code to Nginx's root directory
+          sudo cp -r * /var/www/html
+
+          # Restart Nginx to serve the new files
+          sudo systemctl restart nginx
+          sleep 5
+
+      - name: Check if app is accessible using curl
+        run: |
+          curl -f http://localhost:80/index.html > result.log || echo "App not accessible" > result.log
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v4
         with:
-          name: qunit-test-results
-          path: result.json  # This will upload the result.json file as an artifact
+          name: test-report
+          path: result.log
 
-      # Step 8: Install Docker Engine (for building the Docker image)
+      # Step 6: Install Docker Engine
       - name: Install Docker Engine
-        uses: docker/setup-buildx-action@v2  # For setting up Docker Buildx
+        uses: docker/setup-buildx-action@v2
         with:
           version: 'latest'
 
-      # Step 9: Log in to Docker Hub
+      # Step 7: Log in to Docker Hub
       - name: Docker login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 10: Build the Docker image
+      # Step 8: Build the Docker image
       - name: Build the Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/new-image:1.0.0 .
 
-      # Step 11: Push the Docker image to Docker Hub
+      # Step 9: Push the Docker image to Docker Hub
       - name: Push the Docker image to Docker Hub
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/new-image:1.0.0
