--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,12 @@ jobs:
       - name: Build the Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/new-image:1.0.0 .
+      # 9 : scan the docker image for vulnerabilities
+      - name: scan the docker image for vulnerabilties
+        uses: anchore/scan-action@v3
+        id: scan 
+        with: 
+          image: ${{ secrets. DOCKER_USERNAME }}/NEW-IMAGE:1.0.0
 
       # Step 9: Push the Docker image to Docker Hub
       - name: Push the Docker image to Docker Hub
